Fixed minor issues